test crac withInstantId
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>